<FrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_registration"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"

        >

        <TextView
            android:id="@+id/tv_hi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/hi"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/sp_32"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tv_get_started"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside"
            />

        <TextView
            android:id="@+id/tv_get_started"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_marginStart="@dimen/dp_8"
            android:visibility="invisible"
            android:text="@string/lets_get_started"
            android:textSize="@dimen/sp_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_hi"
            />

        <com.rilixtech.CountryCodePicker
            android:id="@+id/cc_country_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_32"
            android:layout_marginStart="@dimen/dp_32"
            android:paddingBottom="@dimen/dp_16"
            android:paddingTop="@dimen/dp_16"
            app:ccp_defaultNameCode="NP"
            app:ccp_enableHint="false"
            app:ccp_enablePhoneAutoFormatter="true"
            app:ccp_hideNameCode="false"
            app:ccp_showFlag="true"
            app:ccp_textSize="@dimen/sp_16"

            app:layout_constraintBottom_toBottomOf="@+id/editTextCode"
            app:layout_constraintEnd_toStartOf="@+id/editTextCode"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editTextCode"
            />


        <EditText
            android:id="@+id/editTextCode"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_32"
            android:layout_marginRight="@dimen/dp_32"
            android:layout_marginTop="@dimen/dp_64"
            android:maxLength="11"
            android:hint="@string/hint_phone_number"
            android:inputType="phone"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cc_country_code"
            app:layout_constraintTop_toBottomOf="@+id/tv_get_started"
            />

        <RelativeLayout
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_48"
            android:layout_marginTop="@dimen/dp_8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextCode"
            app:layout_constraintVertical_bias="1.0"
            >



            <rezwan.pstu.cse12.view.CircularMorphLayout
                android:id="@+id/cml_proceed_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <TextView
                    android:id="@+id/tv_proceed"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_button_square_corner"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="@string/proceed"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    />
            </rezwan.pstu.cse12.view.CircularMorphLayout>

            <ProgressBar
                android:id="@+id/pb_processing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"
                style="@style/Widget.AppCompat.ProgressBar"
                />
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_verification"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        >

        <ImageView
            android:id="@+id/iv_otp_icon"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_120"
            android:layout_marginTop="@dimen/dp_16"
            android:contentDescription="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_sms_verify"
            />

        <TextView
            android:id="@+id/tv_auto_verify"
            android:layout_width="@dimen/dp_280"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:gravity="center"
            android:text="@string/wait_for_auto_verify"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_otp_icon"
            />

        <TextView
            android:id="@+id/tv_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_32"
            android:textSize="@dimen/sp_20"
            android:visibility="visible"
            android:textColor="@color/colorAccent"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_auto_verify"
            />



        <TextView
            android:id="@+id/tv_label_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_32"
            android:labelFor="@id/pv_otp"
            android:text="@string/enter_6_digit_code"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_phone_number"
            />

        <com.goodiebag.pinview.Pinview
            android:id="@+id/pv_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_pin"
            app:pinBackground="@drawable/background_pinview_bottom_line"
            app:pinHeight="@dimen/dp_36"
            app:pinLength="6"
            app:cursorVisible="true"
            app:pinWidth="@dimen/dp_36"
            app:splitWidth="@dimen/dp_16"
            />



        <RelativeLayout
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_48"
            android:layout_marginTop="@dimen/dp_8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pv_otp"
            app:layout_constraintVertical_bias="1.0"
            >



            <TextView
                android:id="@+id/tv_verify"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_button_square_corner"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:onClick="Verify"
                android:text="@string/verify"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                />



        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>